Fixed Render deployment by adding gunicorn

--- a/requirements.txt
+++ b/requirements.txt
@@ -67,4 +67,9 @@ virtualenv==20.27.0
 Werkzeug==3.0.4
 wheel==0.44.0
 wrapt==1.16.0
-gunicorn
+virtualenv==20.27.0
+Werkzeug==3.0.4
+wheel==0.44.0
+wrapt==1.16.0
+gunicorn==21.2.0
+
